# gufe

./: .coveragerc  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  MANIFEST.in  README.md  environment.yml  json_serialization_move.rst  pyproject.toml  rever.xsh  setup.cfg
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md  release-prep.md
.github/workflows/: black.yml  check_for_api_break.yaml  ci.yaml  conda_cron.yaml  griffe-api-break-check.yaml  mypy.ini  mypy.yaml  python-publish.yml
dev/: dev_protein_component.ipynb
devtools/: raise-or-close-issue.py
docs/: CHANGELOG.rst  api.rst  conf.py  environment.yaml  guide.rst  index.rst  installation.rst  requirements.txt
docs/_templates/: README.md
docs/_templates/autosummary/: class.rst  module.rst
docs/api/: components.rst  protocols.rst  serialize.rst  settings.rst  tokenization.rst  transformation.rst
docs/concepts/: context.rst  core_concepts.rst  core_models.rst  gufe_keys.rst  immutability.rst  included_models.rst  index.rst  logging.rst  overview.rst  serialization.rst  storage.rst  tokenizables.rst
docs/guide/: components_and_systems.rst  overview.rst  protocols.rst  serialization.rst  storage.rst
docs/guides/: core_concepts.rst  index.rst
docs/how-tos/: atommapper.rst  atommapping.rst  component.rst  componentmapping.rst  custom_quantities.rst  index.rst  protocol.rst  serialization.rst
gufe/: __init__.py  _version.py  archival.py  base.py  chemicalstate.py  chemicalsystem.py  component.py  compression.py  custom_codecs.py  custom_json.py  custom_msgpack.py  custom_typing.py  edge.py  ligand_network_planner.py  ligandcomponent.py  ligandnetwork.py  mapping.py  microstate.py  molhashing.py  network.py  proteincomponent.py  protocol.py  smallmoleculecomponent.py  solventcomponent.py  tokenization.py  tokenize.py  transformation.py  utils.py
gufe/components/: __init__.py  check_ions.ipynb  component.py  errors.py  explicitmoleculecomponent.py  explictsolventcomponent.py  proteincomponent.py  smallmoleculecomponent.py  solvatedpdbcomponent.py  solventcomponent.py
gufe/components/sub_files/: element.py  generate_aBondOrderXML.py  pdbfile.py  pdbstructure.py  pdbxfile.py  topology.py  unitcell.py
gufe/components/subfiles/: PDBFile.py
gufe/executors/: __init__.py  client.py  executor.py  results.py  scheduler.py
gufe/mapping/: __init__.py  atom_mapper.py  atom_mapping.py  atom_mapping_scorer.py  componentmapping.py  errors.py  ligandatommapper.py  ligandatommapping.py  mapping_visualization.py  systemmapping.py  viz.py
gufe/networks/: __init__.py  componentnetwork.py  ligandnetwork.py
gufe/protocols/: __init__.py  base.py  errors.py  protocol.py  protocol_settings.py  protocoldag.py  protocolunit.py  results.py  transformation.py  workunit.py
gufe/serialization/: json.py  msgpack.py
gufe/serialization/json/: custom_codecs.py
gufe/settings/: __init__.py  annotations.py  models.py  settings.py  types.py  types_works.py  typing.py
gufe/settings/models/: __init__.py  abstract.py  chemical_composition.py  general.py  reduced_potentials.py
gufe/setup/: alchemical_network_planner.py  chemical_system_generator.py
gufe/setup/network_planning/: __init__.py  component_mapper.py  component_mapping.py  component_mapping_scorer.py  network_plan.py  (+1 more)
gufe/storage/: __init__.py  errors.py  externalresource.py  generics.py  metadatastore.py  pseudodirectory.py  resultclient.py  resultsclient.py  resultserver.py  resultstore.py  stagingdirectory.py  stagingregistry.py  stagingserialization.py  storagemanager.py  unitstoragemanager.py  utils.py
gufe/tests/: conftest.py  test_alchemicalnetwork.py  test_archival.py  test_atommapper.py  test_base.py  test_chemicalstate.py  test_chemicalsystem.py  test_compression.py  test_custom_json.py  test_custom_msgpack.py  test_execute_dag.py  test_explicitmoleculecomponent.py  test_ligand_network.py  test_ligandatommapping.py  test_mapping.py  test_mapping_visualization.py  test_migration_serialization.py  test_models.py  test_molecule.py  test_molhashing.py  test_network.py  test_pdbstructure.py  test_protein_molecule.py  test_proteincomponent.py  test_protocol.py  test_protocol_unit.py  test_protocoldag.py  test_protocolresult.py  test_protocolunit.py  test_serialization.py  test_serialization_json.py  test_serialization_migration.py  test_serialization_msgpack.py  test_settings.py  test_setup_interfaces.py  test_smallmoleculecomponent.py  test_solvatedpdbcomponent.py  test_solvents.py  test_tokenization.py  test_tokenize.py  (+3 more)
gufe/transformations/: __init__.py  results.py  transformation.py
gufe/visualization/: __init__.py  mapping_visualization.py
news/: 796.rst  add-iter.rst  add-protocol-errors.rst  add_alchemical_charge_diff.rst  add_component_howto.rst  add_contains_method.rst  add_execution_interrupt.rst  add_isin_method.rst  add_mapping_3d_viz.rst  add_python313.rst  added_LigandNetwork_delete_edges.rst  added_LigandNetwork_reduce_graph.rst  alchemical_archive.rst  backfill_new.rst  base_solvent.rst  component-howto.rst  component_errors.rst  component_validate.rst  deprecate_to_rbfe_alchemical_network.rst  drop_ambertools.rst  edge_sort.rst  fast_settings.rst  fix-celsius.rst  fix-protocol-create-missing-units.rst  fix_protocoldag_protocolunitmapping.rst  fix_rna_parsing.rst  fix_to_openmm_topology_bonds.rst  fly-pickle-fly.rst  graphml_annotations.rst  ions_nc.rst  issue-541.rst  json_serialization_move.rst  ligand_name_cleanup.rst  lipids-ff.rst  magic_open.rst  msgpack.rst  openmm82update.rst  partial_charge_sum_fix.rst  partial_charge_warning_to_logger.rst  pickle-explicitmoleculecomponent.rst  (+20 more)
src/gufe/: __init__.py  _viewable.py  chemicalsystem.py  ligandnetwork.py  network.py  tokenization.py  utils.py
visualization-demo/: Dockerfile  Dockerfile.dockerignore  dev-start.sh  docker-compose.widget.yml  docker-compose.yml  justfile
visualization-demo/demo/: framejs_demo.ipynb  marimo_demo.py
visualization-demo/scripts/: framejs_frame.py
(+98 files in other folders)
