[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=77.0.3",
  "setuptools-scm>=8",
]

[project]
name = "gufe"
description = ""
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [ { name = "The OpenFE developers", email = "openfe@omsf.io" } ]
requires-python = ">=3.10"

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Chemistry",
]
dynamic = [ "version" ]
urls = { Homepage = "https://github.com/OpenFreeEnergy/gufe" }

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages]
find = { namespaces = false }

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.ruff]
line-length = 120
format.exclude = [ "gufe/vendor/*" ]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
lint.select = [
  "F", # Pyflakes
  "I", # isort
  "W", # pycodestyle warnings
  # "E", # pycodestyle errors
  # "C901"  # mccabe complexity  TODO: add this back in
  # "UP", # TODO: add this in
]
lint.ignore = [
  "E402", # module-level import not at top (conflicts w/ isort)
  "E722", # bare excepts (TODO: we should fix these in a follow-up PR)
  "E731", # lambda expressions (TODO: we should fix these)
  "F403", # undefined name (TODO: fix these)
  "F405", # undefined imports (TODO: fix these)
  "F841", # vars assigned but not used (TODO: fix these)
  "UP03", # pyupgrade linting (TODO: we should fix these)
]

# ignore "unused import" error for all __init__.py files
lint.per-file-ignores."__init__.py" = [ "F401" ]

lint.isort.known-first-party = [ "gufe" ]

[tool.coverage.run]
omit = [
  "*/_version.py",
  "*/tests/dev/*py",
  "gufe/tests/*",
  "gufe/vendor/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "pragma: no-cover",
  "-no-cov",
  "raise NotImplementedError",
  '\.\.\.',
]

[tool.mypy]
files = "gufe"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "gufe.vendor.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "rdkit.Chem.AllChem.*" # TODO: troubleshoot these missing imports, add tests
follow_imports = 'skip'
follow_imports_for_stubs = true

[tool.interrogate]
fail-under = 0
ignore-regex = [ "^get$", "^mock_.*", ".*BaseClass.*" ]
# possible values for verbose: 0 (minimal output), 1 (-v), 2 (-vv)
verbose = 2
color = true
exclude = [ "build", "docs" ]
