[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=77.0.3",
  "setuptools-scm>=8",
]

[project]
name = "gufe"
description = ""
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [ { name = "The OpenFE developers", email = "openfe@omsf.io" } ]
requires-python = ">=3.11,<3.14"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Chemistry",
]
dynamic = [ "version" ]
urls = { Homepage = "https://github.com/OpenFreeEnergy/gufe" }

[tool.setuptools]
zip-safe = false
include-package-data = true
packages.find = { namespaces = false }

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [ "gufe/vendor/*" ]
format.docstring-code-format = true
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
lint.select = [
  "F",  # Pyflakes
  "I",  # isort
  # "E", # pycodestyle errors
  # "C901"  # mccabe complexity  TODO: add this back in
  "UP",
  "W",  # pycodestyle warnings
]
lint.ignore = [
  "E402", # module-level import not at top (conflicts w/ isort)
  "E722", # bare excepts (TODO: we should fix these in a follow-up PR)
  "E731", # lambda expressions (TODO: we should fix these)
  "F403", # undefined name (TODO: fix these)
  "F405", # undefined imports (TODO: fix these)
  "F841", # vars assigned but not used (TODO: fix these)
]
# ignore "unused import" error for all __init__.py files
lint.per-file-ignores."__init__.py" = [ "F401" ]
lint.isort.known-first-party = [ "gufe" ]

[tool.mypy]
files = "gufe"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "gufe.vendor.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "rdkit.Chem.AllChem.*"  # TODO: troubleshoot these missing imports, add tests
follow_imports = "skip"
follow_imports_for_stubs = true

[tool.coverage]
run.omit = [
  "*/_version.py",
  "*/tests/dev/*py",
  "gufe/tests/*",
  "gufe/vendor/*",
]
report.exclude_lines = [
  "-no-cov",
  "\\.\\.\\.",
  "pragma: no cover",
  "pragma: no-cover",
  "raise NotImplementedError",
]

[tool.interrogate]
fail-under = 0
ignore-regex = [ "^get$", "^mock_.*", ".*BaseClass.*" ]
# possible values for verbose: 0 (minimal output), 1 (-v), 2 (-vv)
verbose = 2
color = true
exclude = [ "build", "docs" ]
